examples/realtime_runing_log.txt
(oneLCA-TEA_pg) PS C:\Github\oneLCA-TEA_Phosphogypsum> python examples/e2e_smoke_test.py --limit 1 --skip-raganything
Found 72 PDFs in C:\Github\oneLCA-TEA_Phosphogypsum\data\raw\papers\unparsed
Removing old directory: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db

=== LightRAG smoke run ===

============================================================
   PG-LCA-TEA KNOWLEDGE GRAPH PIPELINE
============================================================
Start time: 2026-04-06 04:54:51
Steps to run: ['all']
RAG Engine: lightrag

============================================================
   STEP 1: PDF PARSING
============================================================
Parser type: mineru
Input:  C:\Github\oneLCA-TEA_Phosphogypsum\data\raw\papers\unparsed
Output: C:\Github\oneLCA-TEA_Phosphogypsum\data\raw\papers\parsed

Found 1 PDF files to process
[1/1] ⏭ Skipped (already parsed): 1. Environmental impact and management of phosphog

========================================
Parsing Complete: 0 success, 1 skipped, 0 errors

============================================================
   STEP 2: LIGHTRAG INDEX CONSTRUCTION
============================================================
LightRAG DB: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db
Source:      C:\Github\oneLCA-TEA_Phosphogypsum\data\raw\papers\parsed
LLM Model:   qwen3.5:35b

Note: Entity extraction uses your LLM (see LLM_BASE_URL / LLM_MODEL in .env).
INFO: [] Created new empty graph file: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db\graph_chunk_entity_relation.graphml
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_entities.json'} 0 data
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_relationships.json'} 0 data
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_chunks.json'} 0 data
INFO: [] Process 34112 KV load full_docs with 0 records
INFO: [] Process 34112 KV load text_chunks with 0 records
INFO: [] Process 34112 KV load full_entities with 0 records
INFO: [] Process 34112 KV load full_relations with 0 records
INFO: [] Process 34112 KV load entity_chunks with 0 records
INFO: [] Process 34112 KV load relation_chunks with 0 records
INFO: [] Process 34112 KV load llm_response_cache with 0 records
INFO: [] Process 34112 doc status load doc_status with 0 records
[1/1] Processing: 1. Environmental impact and management of phosphog...
INFO: Processing 1 document(s)
INFO: Extracting stage 1/1: unknown_source
INFO: Processing d-id: doc-b99dfe56708b095534257ac3e32c9ca3
INFO: Embedding func: 8 new workers initialized (Timeouts: Func: 30s, Worker: 60s, Health Check: 75s)
INFO: LLM func: 4 new workers initialized (Timeouts: Func: 180s, Worker: 360s, Health Check: 375s)
INFO:openai._base_client:Retrying request to /chat/completions in 0.484551 seconds
INFO:openai._base_client:Retrying request to /chat/completions in 0.473171 seconds
INFO:  == LLM cache == saving: default:extract:a54b4655f24ccd93fa0c75b86f74dcb0
INFO:  == LLM cache == saving: default:extract:aa29dfb05798c88eb6bd02eba291fe81
INFO:  == LLM cache == saving: default:extract:1490ca3023e0998f1f5d756251693dd3
INFO:  == LLM cache == saving: default:extract:e92c4ec7e0b0c26d8628bbe00db05b08
INFO:openai._base_client:Retrying request to /chat/completions in 0.410694 seconds
INFO:openai._base_client:Retrying request to /chat/completions in 0.762777 seconds
ERROR: LLM func: Error in decorated function for task 2703241253056_200805.218: Request timed out.
ERROR: Failed to extract entities and relationships: Request timed out.
ERROR: Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 101, in map_httpcore_exceptions
    yield
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 250, in handle_request      
    resp = self._pool.handle_request(req)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\connection_pool.py", line 256, in handle_request 
    raise exc from None
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\connection_pool.py", line 236, in handle_request 
    response = connection.handle_request(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http_proxy.py", line 206, in handle_request      
    return self._connection.handle_request(proxy_request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\connection.py", line 103, in handle_request      
    return self._connection.handle_request(request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 136, in handle_request
    raise exc
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 106, in handle_request
    ) = self._receive_response_headers(**kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 177, in _receive_response_headers
    event = self._receive_event(timeout=timeout)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 217, in _receive_event
    data = self._network_stream.read(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_backends\sync.py", line 126, in read
    with map_exceptions(exc_map):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\contextlib.py", line 158, in __exit__
    self.gen.throw(typ, value, traceback)
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_exceptions.py", line 14, in map_exceptions
    raise to_exc(exc) from exc
httpcore.ReadTimeout: timed out

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_base_client.py", line 1005, in request
    response = self._client.send(
               ^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 914, in send
    response = self._send_handling_auth(
               ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 942, in _send_handling_auth
    response = self._send_handling_redirects(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 979, in _send_handling_redirects        
    response = self._send_single_request(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 1014, in _send_single_request
    response = transport.handle_request(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 249, in handle_request      
    with map_httpcore_exceptions():
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\contextlib.py", line 158, in __exit__
    self.gen.throw(typ, value, traceback)
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 118, in map_httpcore_exceptions
    raise mapped_exc(message) from exc
httpx.ReadTimeout: timed out

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 3110, in _process_with_semaphore     
    result = await _process_single_content(chunk)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 3011, in _process_single_content     
    glean_result, timestamp = await use_llm_func_with_cache(
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py", line 2049, in use_llm_func_with_cache       
    res: str = await use_llm_func(
               ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py", line 1026, in wait_func
    return await future
           ^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py", line 730, in worker
    result = await asyncio.wait_for(
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py", line 489, in wait_for
    return fut.result()
           ^^^^^^^^^^^^
  File "C:\Github\oneLCA-TEA_Phosphogypsum\pgloop\knowledge\lightrag_engine.py", line 244, in llm_func
    response = client.chat.completions.create(**request_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_utils\_utils.py", line 286, in wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\resources\chat\completions\completions.py", line 1211, in create
    return self._post(
           ^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_base_client.py", line 1297, in post
    return cast(ResponseT, self.request(cast_to, opts, stream=stream, stream_cls=stream_cls))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_base_client.py", line 1023, in request
    raise APITimeoutError(request=request) from err
openai.APITimeoutError: Request timed out.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 3118, in _process_with_semaphore     
    raise prefixed_exception from e
openai.APITimeoutError: Request timed out.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\lightrag.py", line 2052, in process_document
    chunk_results = await entity_relation_task
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\lightrag.py", line 2341, in _process_extract_entities  
    raise e
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\lightrag.py", line 2326, in _process_extract_entities  
    chunk_results = await extract_entities(
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 3160, in extract_entities
    raise prefixed_exception from first_exception
openai.APITimeoutError: Request timed out.

ERROR: Failed to extract document 1/1: unknown_source
INFO: Enqueued document processing pipeline stopped
    ✓ Indexed successfully

========================================
Indexed 1 / 1 documents
Working dir: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db

============================================================
   STEP 3: LLM DATA EXTRACTION
============================================================
LLM: http://127.0.0.1:11434/v1 (model=qwen3.5:35b)
RAG Engine: lightrag
Source: C:\Github\oneLCA-TEA_Phosphogypsum\data\raw\papers\parsed (recursive)
Output: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\extracted_data

Processing 1 documents...

[1/1] ⏭ Skipping: 1. Environmental impact and management o (already extracted)

========================================
Extracted data from 1 documents

============================================================
   STEP 4: KNOWLEDGE GRAPH CONSTRUCTION
============================================================
KG Storage: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\knowledge_graph
Extracted Data: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\extracted_data

Loading 1 extraction files...

========================================
Knowledge Graph Statistics:
  Nodes: 1
  Edges: 0
  Node types: {'Source': 1}

============================================================
   PIPELINE COMPLETE
============================================================
End time: 2026-04-06 06:26:32

LightRAG pipeline results:
{
  "parse": 0,
  "index": {
    "1. Environmental impact and management of phosphogypsum.md": true
  },
  "extract": {
    "1. Environmental impact and management of phosphogypsum.md": {}
  },
  "build": {
    "total_nodes": 1,
    "total_edges": 0,
    "nodes_by_type": {
      "Source": 1
    },
    "edges_by_relation": {}
  }
}

LightRAG query smoke test:
INFO: [] Created new empty graph file: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db\graph_chunk_entity_relation.graphml
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_entities.json'} 0 data
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_relationships.json'} 0 data
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_chunks.json'} 0 data
INFO: LLM func: 4 new workers initialized (Timeouts: Func: 180s, Worker: 360s, Health Check: 375s)
INFO:openai._base_client:Retrying request to /chat/completions in 0.415961 seconds
INFO:  == LLM cache == saving: mix:keywords:b1da5513d6f5c7582b38e17f341664b0
INFO: Embedding func: 8 new workers initialized (Timeouts: Func: 30s, Worker: 60s, Health Check: 75s)
INFO: Query nodes: Phosphogypsum, Treatment methods, Disposal techniques, Industrial waste (top_k:40, cosine:0.2)
INFO: Query edges: Phosphogypsum treatment, Treatment pathways, Industrial waste treatment (top_k:40, cosine:0.2)
INFO: Naive query: 0 chunks (chunk_top_k:20 cosine:0.2)
INFO: Raw search results: 0 entities, 0 relations, 0 vector chunks
INFO: [kg_query] No query context could be built; returning no-result.

Q: What are common phosphogypsum treatment pathways?
A: Sorry, I'm not able to provide an answer to that question.[no-context]
INFO:  == LLM cache == saving: mix:keywords:4f254cf24050d2304a8f0208292f6de1
INFO: Query nodes: Rare earth elements, Phosphogypsum, Extraction techniques (top_k:40, cosine:0.2)
INFO: Query edges: Rare earth elements extraction, Phosphogypsum processing, Extraction methods (top_k:40, cosine:0.2)
INFO: Naive query: 0 chunks (chunk_top_k:20 cosine:0.2)
INFO: Raw search results: 0 entities, 0 relations, 0 vector chunks
INFO: [kg_query] No query context could be built; returning no-result.

Q: How to extract rare earth elements from phosphogypsum?
A: Sorry, I'm not able to provide an answer to that question.[no-context]
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEBAE0>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-228' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEBBC0>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-230' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEAA40>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-231' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEB920>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-232' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BE92A0>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-233' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEBE60>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-234' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEBCA0>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-235' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEBD80>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-236' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEA960>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-237' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEB760>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-238' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEAB20>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-239' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
Exception ignored in: <coroutine object Queue.get at 0x0000027565BEB840>
Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py", line 160, in get
    getter.cancel()  # Just in case getter is not done yet.
    ^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 762, in call_soon
    self._check_closed()
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\base_events.py", line 520, in _check_closed
    raise RuntimeError('Event loop is closed')
RuntimeError: Event loop is closed
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-240' coro=<Queue.get() done, defined at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\queues.py:149> wait_for=<Future cancelled> cb=[_release_waiter(<Future pendi...ask_wakeup()]>)() at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py:431]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-184' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.enhanced_health_check() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:785> wait_for=<Future pending cb=[Task.task_wakeup()]>>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-178' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-181' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-176' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-177' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-182' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-179' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-180' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-183' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-164' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.enhanced_health_check() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:785> wait_for=<Future pending cb=[Task.task_wakeup()]>>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-160' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-162' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-161' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
ERROR:asyncio:Task was destroyed but it is pending!
task: <Task pending name='Task-163' coro=<priority_limit_async_func_call.<locals>.final_decro.<locals>.worker() running at C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py:701> wait_for=<Future pending cb=[Task.task_wakeup()]> cb=[set.discard()]>
[INFO] Stopped Ollama model: qwen3.5:35b
[INFO] Stopped Ollama model: qwen3-embedding:4b

Current Ollama loaded models:
NAME    ID    SIZE    PROCESSOR    CONTEXT    UNTIL

E2E smoke test completed.